TA-4046 Fix alignment with pagination number and arrows

--- a/client/css/ussba.css
+++ b/client/css/ussba.css
@@ -265,7 +265,7 @@ ol li:before {
 
 @media only screen and (min-width: 769px) {
   .arrow {
-    margin-right: 0.8rem;
+    margin-right: 0.6rem;
   }
 
   .arrow.down {
